<resources>
    <string name="app_name">SwimProject</string>
    <string name="text_welcome">Давай начнем!</string>
    <string name="please_try_again_toast">Нажмите еще раз</string>
    <string name="dr_sign_in">Войти</string>
    <string name="comment_register">Если у тебя нет зарегистрированного аккаунта</string>
    <string name="comment_register1">Ты можешь</string>
    <string name="comment_register_click">Зарегистрироваться здесь</string>
    <string name="input_email">Введите email</string>
    <string name="input_password">Введите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="dr_registr_comment">Регистрация</string>
    <string name="register_comment4">Если ты уже зарегистрирован</string>
    <string name="comment_signin">Войти</string>
    <string name="input_name">Введите имя</string>
    <string name="input_password_again">Введите пароль еще раз</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="not_empty">Поля не могут быть пустыми!</string>
    <string name="wrong_data_input">Данные введены некорректно</string>
    <string name="question1">Кто ты в мире плавания?</string>
    <string name="notice_level">Новичек</string>
    <string name="medium_level">Любитель</string>
    <string name="advanced_level">Профессионал</string>
    <string name="stamina">Увеличить выносливость</string>
    <string name="technique">Улучшить технику</string>
    <string name="competition">Подготовиться к соревнованиям</string>
    <string name="open_water">Открытая вода</string>
    <string name="question2">Какая у тебя\n цель тренировок?</string>
    <string name="info">Info</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="work">Тренировки</string>
    <string name="infoMain">Информация</string>
    <string name="profile_main">Профиль</string>
    <string name="anthropometry">Anthropometry</string>
    <string name="antropom">Антропометрия</string>
    <string name="ranks">Разряды и Звания</string>
    <string name="record">Мои рекодры</string>
    <string name="my_anthop">Антропометрия</string>
    <string name="weight">Рост</string>
    <string name="Age">Возраст</string>
    <string name="weight_mass">Масса</string>
    <string name="chest">Объем легких</string>
    <string name="ArmSpan">Размах рук</string>
    <string name="foot_size">Размер ноги</string>
    <string name="swimming_technique">Техника плавания</string>
    <string name="exercises">Упражнения</string>
    <string name="about_preparations">О подготовке</string>
    <string name="rules_competition">Правила соревнований</string>
    <string name="technique_title">Техника плавания</string>
    <string-array name="stroke">
        <item>Кроль</item>
        <item>Спина</item>
        <item>Брасс</item>
        <item>Баттерфляй</item>
    </string-array>
    <string name="technique_free">\t1. Телоположение\n
        Постарайтесь держать свое тело столь плоским, как можно ближе к воде, согнув ноги и опустив голову.\n
        Лицо должно находиться в воде, вы наблюдаете за дном бассейна.\n \n
        \t<b>2. Движение рук</b>\n
        Начните с полностью вытянутых рук перед собой, ладонями вместе и над водой.\n
        Начните движение руками вниз и назад, держа их при этом ближе к телу.\n
        Ладони должны вращаться наружу, когда руки движутся вниз, и внутрь, когда они движутся вверх.\n
        Руки должны полностью выходить из воды перед началом следующего движения.\n\n
        \t<b>3. Движение ног</b>\n Ноги должны быть прямыми и близко друг к другу.\n
        Двигайте ногами из тазобедренного сустава, а не из колен, в подобном движению бабочки.\n
        Восходяще-нисходящее движение ног должно помогать вам при движении вперед.\n\n
        \t<b>4. Дыхание</b>\n Дышите каждый раз, когда одна рука выходит из воды.\n
        Поворачивайте голову в сторону, оставляя один ухо в воде, и вдойте.\n
        Направление поворота головы должно совпадать с направлением руки, выходящей из воды.\n </string>
    <string name="technique_back">
    <b>Техника плавания на спине</b>\n\n
    \t1. <b>Положение тела</b>\n
    Держите тело ровно, ближе к воде, с согнутыми ногами и опущенной головой.\n
    Лицо должно быть в воде, наблюдая за дном бассейна.\n\n
    \t2. <b>Движение рук</b>\n
    Начните с вытянутых рук перед собой, ладонями вместе и над водой.\n
    Двигайте руками вниз и назад, держа их ближе к телу, с вращением ладоней наружу вниз и внутрь вверх.\n
    Руки должны полностью выходить из воды перед началом следующего движения.\n\n
    \t3. <b>Движение ног</b>\n
    Ноги должны быть прямыми и близко друг к другу, двигаясь из тазобедренного сустава, как бабочка.\n
    Восходяще-нисходящее движение ног помогает при движении вперед.\n\n
    \t4. <b>Дыхание</b>\n
    Дышите каждый раз, когда одна рука выходит из воды, поворачивая голову в сторону, оставляя ухо в воде.\n
    Направление поворота головы должно совпадать с направлением руки, выходящей из воды.\n
</string>
    <string name="technique_breast"><b>Техника плавания брассом</b>\n

<b>1. Положение тела:</b>\n Начинайте с положения лежа на животе в воде, согнутыми ногами и руками, раскинутыми вперед.\n
        Голова должна быть поднята, чтобы вы могли дышать, а спина должна быть прямой.\n\n

<b>2. Движение рук:</b>\n Начните с рук, вытянутых вперед под водой, пальцами направленными вперед. \n
        Затем, двигаясь одновременно, разводите руки в стороны, согнув локти и приподняв руки над водой. \n
        После этого, снова двигаясь одновременно, сближайте руки вперед, согнув кисти и опуская их под воду.\n\n

<b>3. Движение ног:</b>\n Начинайте с ног, согнутых в коленях и прижатых друг к другу. \n
        Затем, разводя ноги в стороны, плавно выпрямляйте их в коленях и приподнимайте стопы.\n
        После этого, согнув ноги в коленях, возвращайте их в исходное положение.\n\n

<b>4. Дыхание:</b>\n Дышите каждый раз, когда вы выпрямляете руки над водой, поворачивая голову на сторону, противоположную руке, которая выпрямляется. \n
        Направление поворота головы должно совпадать с направлением руки, которая выпрямляется.\n
        Во время выдоха, голову нужно опустить в воду, а во время вдоха - поднять.</string>
    <string name="technique_bat"><b>Техника плавания баттерфляем</b>\n

<b>1. Положение тела:</b>\n Начинайте с положения лежа на животе в воде, согнутыми ногами и руками, прижатыми к бокам.
        \n Голова должна быть поднята, чтобы вы могли дышать, а спина должна быть прямой.\n\n

<b>2. Движение рук:</b>\n Начните с рук, вытянутых вперед под водой, пальцами направленными вперед.
        \n Затем, одновременно выпрямляя руки в локтях, делайте волнообразное движение вперед и назад, как крылья бабочки.
        \n При каждом движении руки должны выходить из воды и затем снова погружаться.\n\n

<b>3. Движение ног:</b>\n Начинайте с ног, согнутых в коленях и прижатых друг к другу.
        \n Затем, разводя ноги в стороны, плавно выпрямляйте их в коленях и делайте волнообразное движение вперед и назад, как хвост рыбы.\n
        После этого, согнув ноги в коленях, возвращайте их в исходное положение.\n\n

<b>4. Дыхание:</b>\n Дышите каждый второй раз, когда вы выпрямляете руки над водой, поворачивая голову на сторону, противоположную руке, которая выпрямляется. \n
        Направление поворота головы должно совпадать с направлением руки, которая выпрямляется.
        \n Во время выдоха, голову нужно опустить в воду, а во время вдоха - поднять.
        \n При плавании баттерфляем дыхание более интенсивное, чем при плавании брассом, поэтому необходимо хорошо тренироваться и контролировать дыхание.</string>
    <string name="preparation">О подготовке</string>
    <string name="preparation_info"><b>Методика подготовки к соревнованиям стаера и спринтера по плаванию</b> \n\n

<b>Макроцикл (12-16 недель)</b>\n\n
<b>Макроцикл</b> – это общий план подготовки, который включает в себя несколько микроциклов. Макроцикл для стаера и спринтера может быть разделен на 3 фазы:\n

<b>Фаза 1:\n Общая физическая подготовка (4-6 недель)</b>\n
<b>Цель:</b>\n развить общую физическую форму и выносливость\n
<b>Тренировки:</b> \n3-4 раза в неделю, 2-3 км в день\n
<b>Упражнения:</b> \nплавание на длинные дистанции, упражнения на сухом плавании, силовые упражнения\n
<b>Фаза 2: Специализированная подготовка (4-6 недель)</b>\n
<b>Цель:</b>\n развить специфические навыки и технику плавания\n
<b>Тренировки:</b>\n 4-5 раза в неделю, 2-3 км в день\n
<b>Упражнения:</b>\n плавание на средние дистанции, упражнения на технику, силовые упражнения\n
<b>Фаза 3:\n Финальная подготовка (2-4 недели)</b>\n
<b>Цель:</b> \nдовести форму до максимума и сохранить ее до соревнований\n
<b>Тренировки:</b>\n 3-4 раза в неделю, 1-2 км в день\n
<b>Упражнения:</b> \nплавание на короткие дистанции, упражнения на скорость, восстановительные тренировки\n
<b>Микроцикл (1-2 недели)</b>\n
<b>Микроцикл</b> – это недельный план тренировок, который включает в себя несколько тренировок. Микроцикл для стаера и спринтера может быть разделен на 3 дня:\n\n

<b>День 1:</b> \nТренировка на выносливость\n
<b>Упражнения:</b> \nплавание на длинные дистанции (800-1200 м), упражнения на сухом плавании\n
<b>Интенсивность:</b>\n60-70% от максимальной\n
<b>День 2:</b>\n Тренировка на технику и силу\n
<b>Упражнения:</b>\n плавание на средние дистанции (200-400 м), упражнения на технику, силовые упражнения\n
<b>Интенсивность:</b> \n70-80% от максимальной\n
<b>День 3:</b>\n Тренировка на скорость\n
<b>Упражнения:</b> \nплавание на короткие дистанции (50-100 м), упражнения на скорость\n
<b>Интенсивность:</b> \n80-90% от максимальной\n
<b>Режимы для стаера и спринтера</b>\n
<b>Стаер</b>\n
<b>Тренировки на выносливость:</b> 3-4 раза в неделю, 2-3 км в день\n
<b>Тренировки на технику и силу:</b> 2-3 раза в неделю, 1-2 км в день\n
<b>Тренировки на скорость:</b> 1-2 раза в неделю, 500-1000 м в день\n
<b>Восстановительные тренировки:</b> 1-2 раза в неделю, 500-1000 м в день\n
<b>Спринтер</b>\n
<b>Тренировки на силу и мощность:</b> 3-4 раза в неделю, 1-2 км в день\n
<b>Тренировки на технику:</b> 2-3 раза в неделю, 500-1000 м в день\n
<b>Тренировки на скорость:</b> 2-3 раза в неделю, 50-200 м в день\n
<b>Восстановительные тренировки:</b> 1-2 раза в неделю, 500-1000 м в день\n
<b>Примеры отрезков плавания</b>\n
<b>Стаер</b>\n
400 м вольным стилем с интервалом 1:30\n
200 м баттерфляем с интервалом 1:15\n
800 м вольным стилем с интервалом 2:00\n
<b>Спринтер</b>\n
50 м вольным стилем с интервалом 0:30\n
25 м баттерфляем с интервалом 0:20\n
100 м вольным стилем с интервалом 1:30\n
<b>Заключение</b>\n
Подготовка к соревнованиям стаера и спринтера по плаванию требует правильного планирования и использования эффективных методов тренировки.\n
        Макроцикл и микроцикл помогут вам организовать свою подготовку и достичь лучших результатов.\n
        Режимы тренировок и примеры отрезков плавания помогут вам нарабатывать необходимую выносливость, технику и скорость.\n
        Удачи вам на соревнованиях!</string>
    <string name="rules">Правила соревнований</string>
</resources>